@@ -20,6 +20,6 @@ public class Qdist008Util {
 		return distribusjonbestilling.getDokumenter().stream()
 				.filter(dokumentInformasjonTo -> dokumentInformasjonTo.getTilknyttetSom().equals(HOVEDDOKUMENT))
 				.map(DistribuerForsendelseTo.DokumentInformasjonTo::getDokumenttypeId).toList()
-				.get(0);
+				.getFirst();
 	}
 }
